--- a/style.css
+++ b/style.css
@@ -27,10 +27,12 @@ section {
 }
 
 h2 {
+    text-align: center;
     font-size: 4.5ch;
 }
 
 h3 {
+    text-align: center;
     font-size: 4.5ch;
 }
 
@@ -60,7 +62,7 @@ h3 {
     margin-left: 200px;
     display: flex;
     width: 200px;
-    height: 130px;
+    height: 100px;
     margin: 20px auto 40px;
     display: block;
 }
@@ -78,5 +80,4 @@ footer {
     height: 40px;
     border-radius: 10%;
 }
-
 
