--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ header {
 }
 
 h1 {
+    display: flex;
     font-size: 4.5ch;
 }
 
@@ -27,11 +28,13 @@ section {
 }
 
 h2 {
+    display: flex;
     text-align: center;
     font-size: 4ch;
 }
 
 h3 {
+    display: flex;
     text-align: center;
     font-size: 4ch;
 }
