--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ header {
 }
 
 h1 {
-    font-size: 4.5ch;
+    text-align: center;
+    font-size: 4ch;
 }
 
 section {
@@ -28,12 +29,12 @@ section {
 
 h2 {
     text-align: center;
-    font-size: 4ch;
+    font-size: 3.5ch;
 }
 
 h3 {
     text-align: center;
-    font-size: 4ch;
+    font-size: 3.5ch;
 }
 
 .partners {
